# mprpc-moc

./: CMakeLists.txt  LICENSE  README.md
example/: friend.pb.cc  friend.pb.h  friend.proto  user.proto
example/callee/: CMakeLists.txt  friends_service.cc  user_service.cc
example/caller/: CMakeLists.txt  call_friendservice.cc  call_userservice.cc
src/: CMakeLists.txt  mprpc_application.cc  mprpc_channel.cc  mprpc_config.cc  mprpc_controller.cc  mprpc_logger.cc  mprpc_provider.cc  zookeeper_util.cc
src/include/: mprpc_application.h  mprpc_channel.h  mprpc_config.h  mprpc_controller.h  mprpc_lockqueue.h  mprpc_logger.h  mprpc_provider.h  zookeeper_util.h
test/protobuf/: git_test.cpp  main.cc
